<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_selected_items"
        android:title="@string/action_selected_items"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/add_category"
        android:title="@string/add_category"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/sign_out_menu"
        android:orderInCategory="101"
        android:title="@string/sign_out"
        app:showAsAction="never"/>

</menu>