<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_cloth_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cloth_name"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_cloth_detail_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cloth_price"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="@+id/et_cloth_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/et_cloth_detail_name" />

            <EditText
                android:id="@+id/et_cloth_detail_purchase_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cloth_purchase_date"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="@+id/et_cloth_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/et_cloth_detail_price" />

            <EditText
                android:id="@+id/et_cloth_detail_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cloth_brand"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/et_cloth_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/et_cloth_detail_purchase_date" />

            <EditText
                android:id="@+id/et_cloth_detail_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cloth_size"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@+id/et_cloth_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/et_cloth_detail_brand" />

            <EditText
                android:id="@+id/et_cloth_detail_description"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:hint="@string/cloth_description"
                android:inputType="text"
                android:lines="5"

                android:singleLine="false"
                app:layout_constraintStart_toStartOf="@+id/et_cloth_detail_name"
                app:layout_constraintTop_toBottomOf="@+id/et_cloth_detail_size" />

            <ImageView
                android:id="@+id/iv_cloth_detail_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/cloth_item_image_description"
                app:layout_constraintTop_toBottomOf="@+id/et_cloth_detail_description" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>