<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/tv_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_category_msg"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText
        android:id="@+id/et_add_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_category"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_category"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btn_add_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_add_category"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_category_description"
        android:text="@string/add_category"
        />


</android.support.constraint.ConstraintLayout>
